--- a/web/hello.html
+++ b/web/hello.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello World</title>
+	<title>Hello World!</title>
 </head>
 <body>
 
-<p>Hello World</p>
+<?php
+echo "Hello World!";
+?>
 
 </body>
 </html>
